--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html lang="fr" dir="ltr">
   <head>
     <meta charset="utf-8" />
+    <!-- adaptation de l'image sur tous types d'écrans, mobile et fixe... -->
+    <meta name="viewport" content="width-device-width, initial-scale=1" />
+    <!-- meta "viewport" obligatoire pour du responsive !!! -->
     <title>L'image responsive</title>
+    <!-- ajouter media="screen" pour pouvoir utliser des @media query dans le css -->
     <link rel="stylesheet" href="assets/css/style.css" media="screen" />
   </head>
   <body>
-    <img id="voiture" src="assets/img/voiture3.jpg" alt="voiture blanche devant maison blanche" />
+    <img src="assets/img/voiture3.jpg" alt="photo d'une voiture blanche devant une maison blanche" title="Voiture blanche"/>
   </body>
 </html>
